@@ -58,7 +58,6 @@ set(LIBRT_SOURCES
   db_lookup.c
   db_match.c
   db_open.c
-  db_path.c
   db_scan.c
   db_tree.c
   db_walk.c
